--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieTracker"
         tools:targetApi="31">
+
+        <!-- MainActivity definována pro spuštění aplikace -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -21,10 +24,21 @@
             android:theme="@style/Theme.MovieTracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Přidána deklarace pro DetailScreen aktivitu -->
+        <activity android:name=".DetailScreen"
+            android:exported="true">
+            <!-- Možná sem chceš přidat i nějaké další nastavení, jako třeba animace přechodů apod. -->
+        </activity>
+
+        <activity android:name=".FavouriteScreen"
+            android:exported="true">
+            <!-- Možná sem chceš přidat i nějaké další nastavení, jako třeba animace přechodů apod. -->
+        </activity>
+
     </application>
 
 </manifest>
