Přidaní History aktivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MovieTracker.Splash"
+        android:theme="@style/Theme.MovieTracker"
         tools:targetApi="31">
 
         <activity
@@ -35,13 +35,19 @@
 
         <!-- Přidána deklarace pro DetailScreen aktivitu -->
         <activity android:name=".DetailScreen"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <!-- Možná sem chceš přidat i nějaké další nastavení, jako třeba animace přechodů apod. -->
         </activity>
 
         <activity android:name=".FavouriteScreen"
             android:exported="true">
             <!-- Možná sem chceš přidat i nějaké další nastavení, jako třeba animace přechodů apod. -->
+        </activity>
+
+        <activity android:name=".RecentHistoryActivity"
+            android:exported="true">
+            <!-- Zde můžete přidat jakékoli další atributy, pokud jsou potřeba -->
         </activity>
 
     </application>
